[package]
name = "poke_search_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true        # Enable Link Time Optimisation
strip = true      # Strip symbols
panic = "abort"   # Don't include backtrace when panics occur

[dependencies]
clap = "4.0.29"
futures = "0.3.25"
rustemon = "3.0.1"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
ngrammatic = "0.3.4"
colored = "2"
once_cell = "1.16.0"
async-trait = "0.1.60"
mockall = "0.9.1"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
