[package]
name = "poke_search_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true        # Enable Link Time Optimisation
strip = true      # Strip symbols
panic = "abort"   # Don't include backtrace when panics occur

[dependencies]
clap = "4"
futures = "0"
rustemon = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ngrammatic = "0"
colored = "2"
once_cell = "1"
async-trait = "0"
mockall = "0"
