[package]
name = "poke_search"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true        # Enable Link Time Optimisation
strip = true      # Strip symbols
panic = "abort"   # Don't include backtrace when panics occur

[dependencies]
async-trait = "0" # https://github.com/dtolnay/async-trait
clap = { version = "4", features = ["derive"] } # https://github.com/clap-rs/clap
colored = "2" # https://github.com/mackwic/colored
futures = "0" # https://github.com/rust-lang/futures-rs
itertools = "0" # https://github.com/rust-itertools/itertools
mockall = "0" # https://github.com/asomers/mockall
ngrammatic = "0" # https://github.com/compenguy/ngrammatic
once_cell = "1" # https://github.com/matklad/once_cell
rustemon = "3" # https://github.com/mlemesle/rustemon
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # https://github.com/tokio-rs/tokio
